--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -26,7 +26,7 @@
     <section id="home">
         <h1>Your Name</h1>
         <p>Short Bio: A brief introduction to who you are, your professional background, and what drives you.</p>
-        <img src="images/profile.jpg" alt="Profile Picture" class="profile-image">
+        <img src="profile-picture.jpg" alt="Profile Picture">
         <p>Contact Info: email@example.com</p>
     </section>
 
@@ -86,7 +86,7 @@
     <!-- Resume/CV Section -->
     <section id="resume">
         <h2>Resume</h2>
-        <a href="docs/resume.pdf" target="_blank" download>Download Resume</a>
+        <a href="resume.pdf" download>Download Resume</a>
     </section>
 
     <!-- Testimonials Section (Optional) -->
