--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -86,7 +86,7 @@
     <!-- Resume/CV Section -->
     <section id="resume">
         <h2>Resume</h2>
-        <a href="resume.pdf" download>Download Resume</a>
+        <a href="docs/resume.pdf" download>Download Resume</a>
     </section>
 
     <!-- Testimonials Section (Optional) -->
